--- a/.github/workflows/control_tests.yaml
+++ b/.github/workflows/control_tests.yaml
@@ -32,6 +32,9 @@ jobs:
     permissions:
       contents: write
     steps:
+      - name: Install pytest
+        run: |
+          pip install pytest
       - name: Push a file to our repository
         run: |
           pwd
