--- a/.github/workflows/control_tests.yaml
+++ b/.github/workflows/control_tests.yaml
@@ -42,7 +42,7 @@ jobs:
           git init
           git remote add origin "https://$GITHUB_ACTOR:${{ secrets.GITHUB_TOKEN }}@github.com/$GITHUB_REPOSITORY.git" 
           git config --global user.email "gilles.guglielmoni@gmail.com"
-          git config --global user.name "gilles-developer"
+          git config --global user.name "gilles-develope"
           git fetch
           git checkout main
           git branch --set-upstream-to=origin/main
